--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@
 buildscript {
     repositories {
         google()
-        jcenter()
+        jcenter(){ url 'https://maven.aliyun.com/repository/jcenter' }
         
     }
     dependencies {
@@ -17,7 +17,7 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+        jcenter(){ url 'https://maven.aliyun.com/repository/jcenter' }
         
     }
 }
