--- a/build.gradle
+++ b/build.gradle
@@ -4,13 +4,11 @@ buildscript {
     repositories {
         google()
         jcenter(){ url 'https://maven.aliyun.com/repository/jcenter' }
-        
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.3'
-        
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath 'org.greenrobot:greendao-gradle-plugin:3.2.2'
     }
 }
 
